# amspipe

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  amspipeConfig.cmake.in  demo.cpp
demo/: demo.F90  demo.c  demo.cpp  demo.run
include/: amspipe.F90  amspipe.h  amspipe.hpp
src/: amspipe.cpp  amspipe_c.cpp  ubjson.cpp  ubjson.hpp
